[gd_scene load_steps=23 format=3 uid="uid://b5vr4kdue1jb2"]

[ext_resource type="Script" path="res://scripts/base_counter.gd" id="1_pix0m"]
[ext_resource type="Resource" uid="uid://c2cyx00w6lbrw" path="res://resources/cutting_recipes/Tomato-TomatoSlices.tres" id="2_q56w3"]
[ext_resource type="Resource" uid="uid://cb8ubngfeuvqt" path="res://resources/cutting_recipes/Cabbage-CabbageSlices.tres" id="3_jdv0h"]
[ext_resource type="Resource" uid="uid://cxumqfd6vu2dg" path="res://resources/slices/cheese_block_slices.tres" id="4_1pxag"]
[ext_resource type="Resource" uid="uid://cum74cmduytuv" path="res://resources/cutting_recipes/CheeseBlock-CheeseBlockSlices.tres" id="4_qklte"]
[ext_resource type="Resource" uid="uid://c72vnjx8le14x" path="res://resources/tomato_SO.tres" id="5_m8t8a"]
[ext_resource type="Resource" uid="uid://bqkxs3dautcti" path="res://resources/frying_recipes/MeatPattyCooked-MeatPattyBurned.tres" id="6_5rq15"]
[ext_resource type="Script" path="res://scripts/CuttingRecipeSO.gd" id="6_k0071"]
[ext_resource type="Resource" uid="uid://q63dfm8e6udi" path="res://resources/frying_recipes/MeatPattyUncooked-MeatPattyCooked.tres" id="7_ddt5t"]
[ext_resource type="PackedScene" uid="uid://csdsgppw14yh7" path="res://scenes/prog_bar_node_scene.tscn" id="8_gq6uo"]
[ext_resource type="PackedScene" uid="uid://tp133h476fvr" path="res://scenes/order_price.tscn" id="11_ldjpg"]

[sub_resource type="Resource" id="Resource_i6vum"]
script = ExtResource("6_k0071")
input = ExtResource("4_1pxag")
output = ExtResource("5_m8t8a")
cutting_prog_max = 3

[sub_resource type="Animation" id="Animation_on1yi"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_gwd4j"]
resource_name = "hover"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1.5, -0.125, 0, 0.125, 0, 1.6, -0.125, 0, 0.125, 0, 1.5, -0.125, 0, 0.125, 0),
"times": PackedFloat32Array(0, 1, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_esxme"]
_data = {
"RESET": SubResource("Animation_on1yi"),
"hover": SubResource("Animation_gwd4j")
}

[sub_resource type="Animation" id="Animation_ufjc3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("price_gained/price_gained_sprite3d:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cfl6s"]
resource_name = "delivered"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("price_gained")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array()
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("price_gained:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.267943, 2.63902),
"update": 0,
"values": [Vector3(0, 2.044, 0), Vector3(0, 2.4, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("price_gained/price_gained_sprite3d:material_override:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(0.307786, 0.176777, 16),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ttqqc"]
_data = {
"RESET": SubResource("Animation_ufjc3"),
"delivered": SubResource("Animation_cfl6s")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_n0hpx"]

[sub_resource type="ViewportTexture" id="ViewportTexture_nts7v"]
viewport_path = NodePath("price_gained/price_gained_sprite3d/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3bkrf"]
resource_local_to_scene = true
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_color = Color(1, 1, 1, 0)
albedo_texture = SubResource("ViewportTexture_nts7v")
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="ViewportTexture" id="ViewportTexture_3tj18"]
viewport_path = NodePath("price_gained/price_gained_sprite3d/SubViewport")

[node name="Base_Counter" type="Node3D" groups=["counters"]]
script = ExtResource("1_pix0m")
CuttingRecipeSOArray = Array[ExtResource("6_k0071")]([ExtResource("3_jdv0h"), ExtResource("4_qklte"), SubResource("Resource_i6vum"), ExtResource("2_q56w3")])
FryingRecipeSOArray = Array[Resource("res://scripts/FryingRecipeSO.gd")]([ExtResource("6_5rq15"), ExtResource("7_ddt5t")])

[node name="hover" type="AnimationPlayer" parent="."]
root_node = NodePath("../CounterTopPoint")
libraries = {
"": SubResource("AnimationLibrary_esxme")
}
autoplay = "hover"

[node name="deliver_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ttqqc")
}

[node name="counter_name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
visible = false
text = "counter_name"

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1.65, 0, 0, 0, 1.65, 0, 0, 0, 1.65, 0, 0, 0)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_n0hpx")

[node name="CounterTopPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
gizmo_extents = 0.84

[node name="FryTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="counter_hud" parent="." instance=ExtResource("8_gq6uo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)

[node name="price_gained" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0)

[node name="price_gained_sprite3d" type="Sprite3D" parent="price_gained"]
transform = Transform3D(0.0499986, 0.000375242, 0, -0.000375242, 0.0499986, 0, 0, 0, 0.05, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_3bkrf")
pixel_size = 0.03
texture = SubResource("ViewportTexture_3tj18")

[node name="SubViewport" type="SubViewport" parent="price_gained/price_gained_sprite3d"]
transparent_bg = true
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
size = Vector2i(822, 512)

[node name="order_price" parent="price_gained/price_gained_sprite3d/SubViewport" instance=ExtResource("11_ldjpg")]
unique_name_in_owner = true

[connection signal="timeout" from="FryTimer" to="." method="_on_fry_timer_timeout"]
